# aruco_board_detect

./: README.md
aruco_board_detect/: CMakeLists.txt  package.xml
aruco_board_detect/cfg/: single_markers_config.yaml
aruco_board_detect/include/aruco_board_detect/: aruco_board_detect_node.h  image_converter.h
aruco_board_detect/include/aruco_detect/: aruco_board_detect_node.h  aruco_board_detect_node.hpp
aruco_board_detect/launch/: aruco_board_detect.launch
aruco_board_detect/msg/: MarkerList.msg
aruco_board_detect/scripts/: compute_camera_position.py  generate_aruco.py
aruco_board_detect/src/: aruco_board_detect_node.cpp  image_converter.cpp  main.cpp
aruco_board_detect/src/aruco_detect/: aruco_board_detect_node.cpp
aruco_detector/: CMakeLists.txt  package.xml
aruco_detector/cfg/: board_config.yaml  markers_config.yaml
aruco_detector/include/: aruco_detector_node.h  camera_parameters.h  image_converter.h
aruco_detector/launch/: aruco_detector.launch
aruco_detector/msg/: MarkerList.msg
aruco_detector/src/: aruco_detector_node.cpp  camera_parameters.cpp  image_converter.cpp  main.cpp
assets/: Insert.stl  Marker cube.stl
