<?xml version="1.0"?>
<package format="2">
  <name>aruco_board_detect</name>
  <version>0.0.1</version>
  <description>The aruco_board_detect package</description>

  <maintainer email="nicola.piga@iit.it">Nicola Piga</maintainer>

  <license>LGPLv2.1</license>
  <buildtool_depend>catkin</buildtool_depend>

  <depend>image_transport</depend>
  <depend>geometry_msgs</depend>
  <depend>roscpp</depend>
  <depend>std_msgs</depend>
  <depend>cv_bridge</depend>
  <depend>tf</depend>

</package>
