<?xml version="1.0"?>
<package format="2">
  <name>aruco_detector</name>
  <version>0.0.1</version>
  <description>An ArUco-based marker pose detector </description>

  <maintainer email="nicola.piga@iit.it">Nicola Piga</maintainer>

  <license>LGPLv2.1</license>
  <buildtool_depend>catkin</buildtool_depend>

  <depend>image_transport</depend>
  <depend>geometry_msgs</depend>
  <depend>roscpp</depend>
  <depend>std_msgs</depend>
  <depend>cv_bridge</depend>
  <depend>tf</depend>

</package>
